# YC_2026

./: CONTEXT_BUILDER.md  IMPLEMENTATION_SUMMARY.md  README.md  architecture.json  majortasks.json  prompt.txt  pyproject.toml  requirements.txt
FlowSync/: README.md  architecture.json  codebase_insight.json  majortasks.json  prompt.txt
FlowSync/FlowSync/: api_integration.py  db.sqlite3  email_parser.py  noise_filtering.py  performance_monitoring.py  pipeline.py  pytest.ini  response_drafting.py  response_service.py  task_generation.py
FlowSync/FlowSync/config/: settings.py
FlowSync/FlowSync/tests/: conftest.py  mock_response.py  pytest.ini  test_email_parser.py  test_models.py  test_noise_filtering.py  test_performance_monitoring.py  test_pipeline.py  test_response_drafting.py  test_response_service.py  test_settings.py  test_task_generation.py
FlowSync/backend/: db.sqlite3
FlowSync/backend/config/: settings.py
gryffin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gryffin_cli/: cli.py
pipeline/: __init__.py  context_builder.py  executor.py  llm.py  planner.py
prompt_taker/: __init__.py  main.py
