[project]
name = "gryffin"
version = "0.1.0"
description = "Gryffin CLI"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0",
  "watchdog>=4.0.0",
]

[project.scripts]
gryffin = "gryffin_cli.cli:main"

[tool.setuptools]
packages = ["pipeline", "gryffin_cli", "prompt_taker"]
